Update product service and verify DDD directory